tests/rosetta/out/Smalltalk/99-bottles-of-beer-2.out
/workspace/mochi/tests/rosetta/out/Smalltalk/99-bottles-of-beer-2.st:96: parse error, expected '|' or identifier
